vehicle_service/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-springboot-microsoft
  labels:
    app: docker-springboot-microsoft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-springboot-microsoft
  template:
    metadata:
      labels:
        app: docker-springboot-microsoft
    spec:
      containers:
        - name: docker-springboot-microsoft
          image: tranquocnha180800/docker-springboot-microsoft:v6
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: docker-springboot-microsoft
spec:
  selector:
    app: docker-springboot-microsoft
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
