vehicle_service/k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-work.microsoft.g52
      http:
        paths:
          - path: /g52
            pathType: Prefix
            backend:
              service:
                name: docker-springboot-microsoft
                port:
                  number: 80

#--
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: app-api-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /api
#            pathType: Prefix
#            backend:
#              service:
#                name: app-api
#                port:
#                  number: 80
